feat: update internal acceptors based on access point and api deployed